Fixed linkr icon spacing + increased text font size

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@
   padding: 0rem 0.5rem;
   min-height: 2rem;
   font-family: inherit;
-  font-size: 1rem;
+  font-size: 3rem;
   line-height: 1.5;
   background-color: white;
   cursor: default;
